# mPB

./: README.md
LG_mPB_libs/: constants.py  lipid.py  pyproject.toml
LG_mPB_libs/data_management/: data_manager.py  data_source.py  data_type.py
LG_mPB_libs/mpb/: characteristic_lengths.py  epsilon_models.py  mpb_solver.py  mpb_types.py  phi_models.py  physics_properties.py  uncalibrated_values.py
LG_mPB_libs/tools/: analysis.py  plot.py  stats.py
