[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LG_mPB_libs"
version = "0.0.1"
authors = [ { name = "Ludovic Gardré", email = "ludovic.gardre@univ-lyon1.fr" } ]
description = "Python library for modified Poisson-Boltzmann analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3",
                "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
                "Operating System :: OS Independent",
                "Topic :: Scientific/Engineering :: Physics" ]

[project.urls]
"Homepage" = "https://github.com/lgardre/mPB.git"
"Bug Tracker" = "https://github.com/lgardre/mPB/issues"